commented the title

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <p id="title"> Profit Calculator </p>
+    <!-- <p id="title"> Crypto Calculator </p> -->
 
     <div class="dropdown">
       <select id="commission_fee">
