ui design changes

--- a/popup.html
+++ b/popup.html
@@ -19,37 +19,36 @@
         <option id="bnb_bnb" value="0.00075">Binance BNB</option>
         <option id="bnb_busd" value="0.000">Binance BUSD</option>
        </select>
+       <i class="fa fa-caret-down"></i>
       </div>
     </div>
 
     <div>
       <span>
-        <label for="total_coins" >Coins</label>
+        <label for="total_coins" class="pr-10">Coins </label>
         <input id="total_coins" type="number" name="total_coins" placeholder=0 />
       </span>
 
       <span>
-        <label for="buy_coins" >Buy &nbsp;&nbsp;</label>
+        <label for="buy_coins" class="pr-10">Buy &nbsp;&nbsp;</label>
         <input id="buy_coins" type="number" name="buy_coins" placeholder=0 />
       </span>
       
       <span>
-        <label for="sell_coins" >Sell &nbsp;&nbsp;</label>
+        <label for="sell_coins" class="pr-10">Sell &nbsp;&nbsp;</label>
         <input id="sell_coins" type="number" name="sell_coins" placeholder=0 />
       </span>
     </div>
     
-    <br>
-    <div>
+    <div class="pl-10 pr-10">
       <ul class="flex-container space-between">
-        <li class="flex-item f15">
-          Total Buy: <br><span id='total_buy'><span>
+        <li class="flex-item f13">
+          Total Buy: <br><span class="green f20" id='total_buy'><span>
         </li>
-        <li class="flex-item f15">
-          Total Sell: <br><span id='total_sell'><span>
+        <li class="flex-item f13">
+          Total Sell: <br><span class="red f20" id='total_sell'><span>
         </li>
       </ul>
-      <br>
       <ul class="flex-container space-between">
         <li class="flex-item f13">
           Buy fee: <span id='buy_fee'><span>
@@ -58,9 +57,13 @@
           Sell fee: <span id='sell_fee'><span>
         </li>
       </ul>
-      <p id="total_style" class="f15"> Commission Fee: <span id='total_fee'><span></p>
-      <button class="button-34" role="button" id='Profit'>Total Profit</button>
-      <span id='total_profit' class="f20"><span>
+      <p id="total_style" class="f15">
+        Commission Fee: <span class="ml-15 f20 total_fee" id='total_fee'><span>
+      </p>
+      <p>
+        <button class="button-34" role="button" id='Profit'>Total Profit</button>
+        <span id='total_profit' class="profit_amt"><span>
+      </p>
     </div>
 
     <script src="./popup_script.js"></script>
